--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 }
 
 html {
-    overflow: visible;
+    overflow-x: hidden;
 }
 
 .container {
@@ -86,7 +86,7 @@ section h2 {
 }
 
 .lista-veiculos {
-    flex-wrap: wrap;
+    flex-wrap: wrap;    
 }
 
 .lista-veiculos li {
@@ -95,7 +95,7 @@ section h2 {
     margin-bottom: 24px;
 }
 
-.lista-veiculos li {
+.lista-veiculos li img {
     max-width: 100%;
 }
 
